# CHANGELOG
##############

Version 0.3.*:
--------------
52: Removed conda from quantify and added escalation rulesets to all quantify/*.smk files
51: Quantify is now part of the rule all
50: Cosmetic changes for the escalation setting
49: Fixed a bug that prevented a dryrun to run while escalating resources were defined
48: Added the singularity-prefix to the run script
47: Added resource sets, resource escalation functions and retries (trial in helpers__fastqc)
46: Sylph for contigs and mags removed for now
45: DRAM distill input fixed, annotation had wrong scaffold entry so output was too strongly condensed
44: Sylp added to annotate module
43: contig_annotate__sylp added
42: preprocess__sylph added
41: --keep-going added as default option to run the pipeline
40: Order of the host decontamination changed, to avoid sequence similarity problems between different genomes
39: Hard-coded threads in reference__hosts__recompress changed to variable
39: Added the missing proteinortho files to be moved into result folder
38: Fixed the output for proteinortho
37: Output for DRAM_mag rule adjusted
36: Function names for bowtie rules harmonised
35: Function call to contig_annotate__prodigal improved
34: Optional Debug comments added to the Snakefile
33: DRAM mag rules added
32: Adjusted the Output ruleset for contig_annotate__camper and moved from folder to concrete files
31: Apply proteinortho now on the set of proteins obtains from the different MAG sets
30: Added bakta annotation for each MAG separately instead of applying it to one dereplicated MAG-set only
29: Summary tables for Diamond added
28: Bowtie2 and Humann2 were moved to own docker container 
27: Added camper to contig_annotate
26: Names of many rules were adjusted to follow a similary naming scheme
25: Krona got an own singularity image, as it downversion bowtie2 in the same image for some reason
24: Re-enabled the splif-fasta for proteinortho input
23: Krona plots added for kraken2